# state-cancer-profile-scraper

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  run-scrape.yaml
scps/: cli.py  scraper.py
tests/: _mock_data.py  conftest.py  test_scraper.py
