[project]
name = "state-cancer-profile-scraper"
version = "0.1.0"
description = ""
authors = [{name = "Sean Davis", email = "seandavi@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scps"]
