[project]
name = "state-cancer-profile-scraper"
version = "0.1.0"
description = ""
authors = [{name = "Sean Davis", email = "seandavi@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.27.0,<0.28.0",
    "pandas>=2.2.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scps"]
